--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label>Email</label>
-      <input type="email" class="form-control" formControlName="email">
+      <input type="email" class="form-control" formControlName="email" required>
     </div>
     <div class="form-group">
       <label>Password</label>
@@ -11,8 +11,7 @@
     </div>
     <button class="btn btn-primary" type="submit">Effettua il login</button>
   </form>
-</div>
-
-<div class="alert alert-danger" *ngIf="loginError">
-  {{ loginError }}
+  <div class="alert alert-danger" *ngIf="loginError">
+    {{ loginError }}
+  </div>
 </div>
