--- a/src/app/home-pokemon/home-pokemon.component.css
+++ b/src/app/home-pokemon/home-pokemon.component.css
@@ -8,6 +8,37 @@
     text-align: center;
 }
 
+.nav-bar-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.nav-link {
+    border: 3px solid black;
+    border-radius: .3rem;
+    padding: .5rem;
+    margin-bottom: .5rem;
+    font-size: 2rem;
+    color: white;
+}
+
+.nav-link:hover {
+    background-color: #337ab7;
+    color: white !important; 
+}
+
+.nav-link a {
+    text-decoration: none;
+    text-transform: none;
+}
+
+.active-link {
+    background-color: #337ab7;
+    color: white !important; 
+}
+
 .gap-card {
     display: flex;
     width: 100%;
