--- a/src/app/home-pokemon/home-pokemon.component.css
+++ b/src/app/home-pokemon/home-pokemon.component.css
@@ -1,3 +1,7 @@
+.bg-red {
+    background-color: red;
+}
+
 .pokedex {
     background-color: #337ab7;
     color: white;
@@ -17,21 +21,21 @@
 
 .nav-link {
     border: 3px solid black;
+    background-color: antiquewhite;
     border-radius: .3rem;
     padding: .5rem;
     margin-bottom: .5rem;
     font-size: 2rem;
-    color: white;
+    
 }
 
 .nav-link:hover {
     background-color: #337ab7;
-    color: white !important; 
 }
 
 .nav-link a {
     text-decoration: none;
-    text-transform: none;
+    color: rgb(65, 65, 65);
 }
 
 .active-link {
