--- a/src/app/home-pokemon/home-pokemon.component.html
+++ b/src/app/home-pokemon/home-pokemon.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-red">
   <div class="row">
     <div class="col-md-12">
       <h3 class="pokedex">Pokédex</h3>
